<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PathActivities.Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
                android:id="@+id/toMap_btn"
                android:layout_width="match_parent"
                android:layout_height="308dp"
                android:background="@android:color/holo_blue_dark"
                android:text="Search"
                android:textSize="30sp"
                android:typeface="serif"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="152dp"/>

        <Button
                android:id="@+id/toCurM_btn"
                android:layout_width="match_parent"
                android:layout_height="309dp"
                android:background="@android:color/holo_blue_light"
                android:text="Messages"
                android:textSize="30sp"
                android:typeface="serif"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>